--- a/AsmHW_SmartRename.csproj
+++ b/AsmHW_SmartRename.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F6CF2167-F8BE-4119-890C-9ED7ACFAE043}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>AsmHW_SmartRename</RootNamespace>
     <AssemblyName>AsmHW_SmartRename</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
