--- a/App.config
+++ b/App.config
@@ -11,16 +11,16 @@
     <userSettings>
         <AsmHW_SmartRename.Properties.Settings>
             <setting name="FirstName" serializeAs="String">
-                <value />
+                <value>Yonatan</value>
             </setting>
             <setting name="LastName" serializeAs="String">
-                <value />
+                <value>Zheleznyakov</value>
             </setting>
             <setting name="HWPath" serializeAs="String">
-                <value />
+                <value>D:\Magshimim\Magshimim-Assembly</value>
             </setting>
             <setting name="FoldersPattern" serializeAs="String">
-                <value />
+                <value>^Lesson(\d+)$</value>
             </setting>
         </AsmHW_SmartRename.Properties.Settings>
     </userSettings>
